--- a/src/components/control/Pagination.astro
+++ b/src/components/control/Pagination.astro
@@ -81,7 +81,7 @@ const getPageUrl = (p: number) => {
             >{p}</a>
         })}
     </div>
-    <a href={url(page.url.next)} aria-label={page.url.next ? "Next Page" : null}
+    <a href={url(page.url.next)} aria-label={page.url.next ? "Далее" : null}
        class:list={["btn-card overflow-hidden rounded-lg text-[var(--primary)] w-11 h-11",
            {"disabled": page.url.next == undefined}
        ]}
